--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,7 +11,14 @@
         "html"
     ],
     "cSpell.words": [
+        "Camila",
+        "Daniela",
+        "daytona",
         "Daytona",
-        "Ducati"
+        "descripcion",
+        "Ducati",
+        "Javiera",
+        "trumph",
+        "ubicacion"
     ]
 }
