Se agrega Mensaje Personalizado

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,6 +18,8 @@
         "descripcion",
         "Ducati",
         "Javiera",
+        "swal",
+        "sweetalert",
         "trumph",
         "ubicacion"
     ]
